{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 67,
  "lineage": "3be45261-fcff-e3e7-dd09-1741a9754730",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-067cc730a731a56e3",
            "arn": "arn:aws:ec2:sa-east-1:883609937142:elastic-ip/eipalloc-067cc730a731a56e3",
            "association_id": "eipassoc-05b56999e4149b251",
            "domain": "vpc",
            "id": "eipalloc-067cc730a731a56e3",
            "network_border_group": "sa-east-1",
            "network_interface": "eni-0aeb2caa1868a678d",
            "private_dns": "ip-10-0-1-77.sa-east-1.compute.internal",
            "private_ip": "10.0.1.77",
            "public_dns": "ec2-56-126-5-9.sa-east-1.compute.amazonaws.com",
            "public_ip": "56.126.5.9",
            "public_ipv4_pool": "amazon",
            "region": "sa-east-1",
            "tags": {
              "Name": "fii-nat-eip"
            },
            "tags_all": {
              "Name": "fii-nat-eip"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:883609937142:internet-gateway/igw-0eb1d35e20544b0c8",
            "id": "igw-0eb1d35e20544b0c8",
            "owner_id": "883609937142",
            "region": "sa-east-1",
            "tags": {
              "Name": "fii-igw"
            },
            "tags_all": {
              "Name": "fii-igw"
            },
            "vpc_id": "vpc-0d142908351ee59c9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-067cc730a731a56e3",
            "association_id": "eipassoc-05b56999e4149b251",
            "connectivity_type": "public",
            "id": "nat-04e5d96f39f03e32d",
            "network_interface_id": "eni-0aeb2caa1868a678d",
            "private_ip": "10.0.1.77",
            "public_ip": "56.126.5.9",
            "region": "sa-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0ead8e009eaef68fc",
            "tags": {
              "Name": "fii-nat-gateway"
            },
            "tags_all": {
              "Name": "fii-nat-gateway"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:883609937142:route-table/rtb-08ccf4f00fd80dbb0",
            "id": "rtb-08ccf4f00fd80dbb0",
            "owner_id": "883609937142",
            "propagating_vgws": [],
            "region": "sa-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-04e5d96f39f03e32d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "fii-private-rt"
            },
            "tags_all": {
              "Name": "fii-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d142908351ee59c9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "883609937142",
            "id": "rtb-08ccf4f00fd80dbb0",
            "region": "sa-east-1"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gw",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:883609937142:route-table/rtb-0b7ce75a50b22425a",
            "id": "rtb-0b7ce75a50b22425a",
            "owner_id": "883609937142",
            "propagating_vgws": [],
            "region": "sa-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0eb1d35e20544b0c8",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "fii-public-rt"
            },
            "tags_all": {
              "Name": "fii-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d142908351ee59c9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "883609937142",
            "id": "rtb-0b7ce75a50b22425a",
            "region": "sa-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-078260c5fb00c2cae",
            "region": "sa-east-1",
            "route_table_id": "rtb-08ccf4f00fd80dbb0",
            "subnet_id": "subnet-059b61b7fd2c86353"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.private_rt",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02d4b379be22361a6",
            "region": "sa-east-1",
            "route_table_id": "rtb-0b7ce75a50b22425a",
            "subnet_id": "subnet-0ead8e009eaef68fc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lambda_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:883609937142:security-group/sg-0d1488c3605350872",
            "description": "Allows all outbound (egress) traffic from the Lambda",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d1488c3605350872",
            "ingress": [],
            "name": "fii-lambda-sg",
            "name_prefix": "",
            "owner_id": "883609937142",
            "region": "sa-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "fii-lambda-sg"
            },
            "tags_all": {
              "Name": "fii-lambda-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d142908351ee59c9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "883609937142",
            "id": "sg-0d1488c3605350872",
            "region": "sa-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:883609937142:subnet/subnet-059b61b7fd2c86353",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1b",
            "availability_zone_id": "sae1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-059b61b7fd2c86353",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "883609937142",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "sa-east-1",
            "tags": {
              "Name": "fii-private-subnet"
            },
            "tags_all": {
              "Name": "fii-private-subnet"
            },
            "vpc_id": "vpc-0d142908351ee59c9"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "883609937142",
            "id": "subnet-059b61b7fd2c86353",
            "region": "sa-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:883609937142:subnet/subnet-0ead8e009eaef68fc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1a",
            "availability_zone_id": "sae1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ead8e009eaef68fc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "883609937142",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "sa-east-1",
            "tags": {
              "Name": "fii-public-subnet"
            },
            "tags_all": {
              "Name": "fii-public-subnet"
            },
            "vpc_id": "vpc-0d142908351ee59c9"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "883609937142",
            "id": "subnet-0ead8e009eaef68fc",
            "region": "sa-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:883609937142:vpc/vpc-0d142908351ee59c9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03669ebbe0c15be66",
            "default_route_table_id": "rtb-048645a1277033d2a",
            "default_security_group_id": "sg-06cd909baffbbb54c",
            "dhcp_options_id": "dopt-0d1e703ea1b5050ad",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d142908351ee59c9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-048645a1277033d2a",
            "owner_id": "883609937142",
            "region": "sa-east-1",
            "tags": {
              "Name": "fii-pipeline-vpc"
            },
            "tags_all": {
              "Name": "fii-pipeline-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "883609937142",
            "id": "vpc-0d142908351ee59c9",
            "region": "sa-east-1"
          }
        }
      ]
    }
  ]
}